@@ -1,0 +1,30 @@
+/* XPM */
+static char * status_away_xpm[] = {
+"17 17 10 1",
+" 	c None",
+".	c #FFFFFF",
+"+	c #FFFF00",
+"@	c #FF0000",
+"#	c #C6C3C6",
+"$	c #848284",
+"%	c #848200",
+"&	c #840000",
+"*	c #000084",
+"=	c #000000",
+"                 ",
+"      ######     ",
+"    ###==%%###   ",
+"   ##==++++%%##  ",
+"   #=++....+.%#  ",
+"  ##=+...++++%## ",
+"  #=+..*.+*.++%# ",
+"  #=+.#$##$#++%# ",
+"  $=&&=+++++++%# ",
+" #=@@@@=+++%++%# ",
+" &@@@@@@=#%++%## ",
+" &......=++++%#  ",
+" &......=.+%%##  ",
+" &@@@@@@==%###   ",
+" #&@@@@=####     ",
+"  #&&&=          ",
+"                 "};
